# pointing

./: .gitignore  README.md
other/: my_world.world
other/FRI2_Project/: CMakeLists.txt  package.xml
other/FRI2_Project/include/fri2/: ImageProcessor.h  MakeLine.h  Storage.h  point_math.h
other/FRI2_Project/src/: ImageProcessor.cpp  MakeLine.cpp  point_math.cpp
other/OpenPoseUtil/: OpenPoseUtil.cpp  OpenPoseUtil.h
other/hsr_gazebo/: package.xml
other/hsr_gazebo/launch/: hsr_apt.launch  turtle.launch
other/hsr_gazebo/maps/: hex_map.yaml
other/my_room/: model.sdf
other/objectDetection/: README.md  objectDetection.py  requirements.text  server.py
ros_pkgs/point/: CMakeLists.txt  README.md
ros_pkgs/point/include/: Client.h  ProjectiveUtil.h  TFBroadcastPR.h
ros_pkgs/point/include/point/: ProjectiveUtil.h  SubscribeToKinect.h
ros_pkgs/point/src/: CallPython.cpp  SubscribeToKinect.cpp  TFBroadcastPR.cpp  point_identification_node.cpp
src/FRI2_Project/: README.md
src/FRI2_Project/src/: Mapping.cpp  Storage.cpp  pointing_main.cpp
src/hsr_control/: CMakeLists.txt  package.xml
src/hsr_control/config/: hsr_control.yaml
src/hsr_control/launch/: fake_localization.launch  hsr_control.launch
src/hsr_description/launch/: upload_hsrb.launch  upload_hsrb_with_fake_joints.launch
src/hsr_description/robots/: hsrb4s_with_fake_joints.urdf.xacro
src/hsr_gazebo/: CMakeLists.txt  groovy_motion.py  move.py  package.xml
src/hsr_gazebo/launch/: hsr.launch  hsr_apt.launch
src/hsr_gazebo/maps/: cube_map.pgm  cube_map.yaml  hex_map.pgm
src/my_room/: model.config
src/objectDetection/: server.py
src/point/: CMakeLists.txt  README.md  package.xml
src/point/include/: CallPython.h  Client.h  PoseRecipient.h  ProjectiveUtil.h  SubscribeToKinect.h
src/point/include/point/: CallPython.h
src/point/src/: CallPython.cpp  Client.cpp  ProjectiveUtil.cpp  SubscribeToKinect.cpp  TFBroadcastPR.cpp  client.py  objectDetection.py  point_identification_node.cpp  subscribeToKinect.cpp
src/point_interpretation/: CMakeLists.txt  Makefile  cmake_install.cmake  point_interpretation  point_interpretation.cpp
src/point_interpretation/include/: Client.h  Image.h  SubscribeToKinect.h
src/point_interpretation/src/: Client.cpp  Image.cpp  SubscribeToKinect.cpp  cube.cpp  point_interpretation.cpp  subscribe_to_kinect.cpp
