<?xml version="1.0"?>
<package>
  <name>hsr_gazebo</name>
  <version>0.13.0</version>
  <description>Gazebo launch files with services</description>

  <maintainer email="keisuke_takeshita@mail.toyota.co.jp">Keisuke Takeshita</maintainer>

  <license>TMC</license>

  <author>Tamaki Nishino</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hsrb_gazebo_bringup</run_depend>
  <run_depend>hsrb_common_launch</run_depend>
  <run_depend>tmc_potential_maps</run_depend>
  <run_depend>tmc_roslaunch_tools</run_depend>
  <!-- for pass_all_args attribute (this tag will be deleted at the next release) -->
  <run_depend>rviz</run_depend>
  <test_depend>roslaunch</test_depend>
  <export/>
</package>